# pytorch-usages

./: .gitignore  README.md  github_sync_reset.sh  main.py  pyproject.toml  requirements.txt
UseCases/Stock_Price_Prediction/: sentiment_train.ipynb  sentiment_train.py
models/: __init__.py  cnn.py  cnn_model.py  lstm_model.py  lstm_model_draft.py  simple_model.py  temp.py
predict/: cnn_predict.ipynb  cnn_predict_draft.py  lstm_predict.ipynb  lstm_predict_draft.ipynb
predict_sample/: cnn_predict.ipynb  lstm_predict.ipynb
predicts/: cnn_predict_draft.py
train/: cnn_draft.py  cnn_train.ipynb  lstm_train.ipynb  lstm_train_draft.py  simple_train.ipynb
train_sample/: cnn_train.ipynb  lstm_train.ipynb  simple_train.ipynb
use_case/Face_Recognition/predict/: face_recognition_predict.py
use_case/Face_Recognition/train/: face recognition_train.py
use_case/Recommendation_System/: anime_interest.md  interim_data_plan.md  multi_model_plan.md  multi_model_recommendation_plan.md
use_case/Recommendation_System/data/: prepare_data.py
use_case/Recommendation_System/parallel_model_outputs/: user_cluster_list.parquet  user_cluster_selected_features.parquet
use_case/Recommendation_System/shared/: anime_interest.py  clustering.py  (+2 more)
use_case/Stock_Price_Prediction/: get_financial_data.ipynb  sentiment_predict.ipynb  sentiment_predict.py  sentiment_predict_sample.ipynb  sentiment_train.ipynb
utils/: __init__.py  callback.py  cnn_helper.py  dataset_helper.py  device.py  image_helper.py  image_resize.py  support_helper.py  text_helper.py  train_helper.py  training.py
(+160 files in other folders)
