[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-usages"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "utils*", "use_case*"]
exclude = ["data*", "checkpoints*", "train_sample*", "predict_sample*", "myenv*"]